# RAG

./: .env  .gitignore  RAG.ipynb  README.md  chatbot.py  config.py  document_processing.py  pyproject.toml
collab_notebook/: RAG.ipynb  document_loader.ipynb
collab_notebook /: RAG.ipynb
